@@ -15,9 +15,7 @@
  */
 package org.projectnessie.gc.contents.jdbc;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import org.intellij.lang.annotations.Language;
 
@@ -171,17 +169,9 @@ final class SqlDmlDdl {
           + "    WHERE live_set_id = ? AND content_id = ?";
 
   static final Map<String, String> ALL_CREATES =
-      Map.of(
+      ImmutableMap.of(
           "gc_live_sets", CREATE_LIVE_SETS,
           "gc_live_set_contents", CREATE_LIVE_SET_CONTENTS,
           "gc_live_set_content_locations", CREATE_LIVE_SET_LOCATIONS,
           "gc_file_deletions", CREATE_FILE_DELETIONS);
-
-  static final List<String> ALL_TABLE_NAMES =
-      Collections.unmodifiableList(
-          Arrays.asList(
-              "gc_live_set_content_locations",
-              "gc_live_set_contents",
-              "gc_live_sets",
-              "gc_file_deletions"));
 }
